force-app/main/default/objects/Recovery__c/fields/Recovery_Reason__c.field-meta.xml
<CustomField>
    <fullName>Recovery_Reason__c</fullName>
    <businessOwnerUser>brenton.watson@qantas.com.au.pist</businessOwnerUser>
    <description>Recovery Reason shows the reason for the recovery, which is communicated to the customer</description>
    <label>Recovery Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damaged Baggage</fullName>
            </value>
            <value>
                <fullName>Lost Baggage</fullName>
            </value>
            <value>
                <fullName>Ticket Refund (Compassionate Grounds)</fullName>
            </value>
            <value>
                <fullName>Ticket Refund (Non-Refundable Fare)</fullName>
            </value>
            <value>
                <fullName>Ticket Refund (Error)</fullName>
            </value>
            <value>
                <fullName>Cancellation Fees</fullName>
            </value>
            <value>
                <fullName>EMDS (Baggage &amp; Seats)</fullName>
            </value>
            <value>
                <fullName>EMDS (Bid Upgrade)</fullName>
            </value>
            <value>
                <fullName>Adcol Charged Incorrectly</fullName>
            </value>
            <value>
                <fullName>Expense Reimbursement (Flight Disruptions)</fullName>
            </value>
            <value>
                <fullName>Delayed Baggage (Emergency Expenses)</fullName>
            </value>
            <value>
                <fullName>EU Compensation</fullName>
            </value>
            <value>
                <fullName>Montreal Convention Compensation</fullName>
            </value>
            <value>
                <fullName>Civil Aviation Authority Compensation</fullName>
            </value>
            <value>
                <fullName>Bag Repair</fullName>
            </value>
            <value>
                <fullName>Missing Baggage Contents</fullName>
            </value>
            <value>
                <fullName>Damaged Mobility Aid</fullName>
            </value>
            <value>
                <fullName>Delayed Mobility Aid</fullName>
            </value>
            <value>
                <fullName>Lost Mobility Aid</fullName>
            </value>
            <value>
                <fullName>Ticket Refund</fullName>
            </value>
            <value>
                <fullName>In-flight Experience (defaulted)</fullName>
            </value>
            <value>
                <fullName>Airport Experience</fullName>
            </value>
            <value>
                <fullName>Lounge Experience</fullName>
            </value>
            <value>
                <fullName>In-flight Experience</fullName>
            </value>
            <value>
                <fullName>Digital Experience</fullName>
            </value>
            <value>
                <fullName>Flight Disruption</fullName>
            </value>
            <value>
                <fullName>Baggage Experience</fullName>
            </value>
            <value>
                <fullName>Contact Centre Service Experience</fullName>
            </value>
            <value>
                <fullName>Points Refund</fullName>
            </value>
            <value>
                <fullName>Seating Downgrades</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>