force-app/main/default/objects/Recovery__c/fields/Recovery_System_log__c.field-meta.xml
<CustomField>
    <fullName>Recovery_System_log__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Recovery System log</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>