force-app/main/default/objects/Recovery__c/fields/Refund_Account__c.field-meta.xml
<CustomField>
    <fullName>Refund_Account__c</fullName>
    <description>QCC: Used to store the account the EFT/Credit card refund is coming from for a recovery</description>
    <label>Refund Account</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cost_Centre_Account_Number__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>111017	(DPS Cntrl CCP Chargeback)</fullName>
            </value>
            <value>
                <fullName>151370	(QDT)</fullName>
            </value>
            <value>
                <fullName>320022	(Qlink CX SYD)</fullName>
            </value>
            <value>
                <fullName>351356 (Group Insurance Services)</fullName>
            </value>
            <value>
                <fullName>664100	(Misc Revenue)</fullName>
            </value>
            <value>
                <fullName>706021	(Other Employment Costs-Non FBT)</fullName>
            </value>
            <value>
                <fullName>712001	(EU Regulation)</fullName>
            </value>
            <value>
                <fullName>715105 (Sent to wrong destination / Mishandled)</fullName>
            </value>
            <value>
                <fullName>715110 (Cargo Claims)</fullName>
            </value>
            <value>
                <fullName>718000	(Baggage Emergency Expenses)</fullName>
            </value>
            <value>
                <fullName>718001	(Delay Costs)</fullName>
            </value>
            <value>
                <fullName>718005	(Frontline Recovery)</fullName>
            </value>
            <value>
                <fullName>718006	(Baggage Lost)</fullName>
            </value>
            <value>
                <fullName>718007 (Baggage Recharge)</fullName>
            </value>
            <value>
                <fullName>718009	(Events)</fullName>
            </value>
            <value>
                <fullName>718011	(Baggage Damaged)</fullName>
            </value>
            <value>
                <fullName>718012	(Surprise and Delight)</fullName>
            </value>
            <value>
                <fullName>718015	(Denied Boarding Compensation)</fullName>
            </value>
            <value>
                <fullName>718016	(Denied Pax Meals/Accom)</fullName>
            </value>
            <value>
                <fullName>718017	(Ex Gratia Passenger)</fullName>
            </value>
            <value>
                <fullName>718018	(Travel Certificate)</fullName>
            </value>
            <value>
                <fullName>718019	(Downgrade Compensation)</fullName>
            </value>
            <value>
                <fullName>718020	(EU Compensation)</fullName>
            </value>
            <value>
                <fullName>718038	(Charter/Divert Costs - QF)</fullName>
            </value>
            <value>
                <fullName>718044	(Baggage Pilferage)</fullName>
            </value>
            <value>
                <fullName>718086 (Misc Pax Expenses)</fullName>
            </value>
            <value>
                <fullName>718086	(Ops Expenditure)</fullName>
            </value>
            <value>
                <fullName>718100 (Canada Regulation)</fullName>
            </value>
            <value>
                <fullName>754315	(Short Collection)</fullName>
            </value>
            <value>
                <fullName>754905 (FF Operations)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>