force-app/main/default/objects/Recovery__c/fields/Refund_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Account_Number__c</fullName>
    <description>Used to separate the refund account number from the refund account field</description>
    <formula>LEFT(TEXT(Refund_Account__c), 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Account Number</label>
    <type>Text</type>
</CustomField>