force-app/main/default/objects/Recovery__c/fields/Refund_Card_Expiry_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Refund_Card_Expiry_Resolve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Card Expiry</label>
    <length>100</length>
    <type>Text</type>
</CustomField>