force-app/main/default/objects/Recovery__c/fields/Refund_Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Refund_Cost_Centre__c</fullName>
    <description>QCC: Used to store the Cost Centre that is relevant to the EFT Refund recovery</description>
    <label>Refund Cost Centre</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Cost_Centre_Account_Number__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100033	(A380)</fullName>
            </value>
            <value>
                <fullName>100035 (Group Insurance Services)</fullName>
            </value>
            <value>
                <fullName>100176	(QDT)</fullName>
            </value>
            <value>
                <fullName>100238	(Exec GM Subsidiary Businesses)</fullName>
            </value>
            <value>
                <fullName>100247	(Corporate Accruals)</fullName>
            </value>
            <value>
                <fullName>100280	(Corp Reservations)</fullName>
            </value>
            <value>
                <fullName>100379	(Qantas Industry Centre)</fullName>
            </value>
            <value>
                <fullName>100387 (QF Customer Strategy and Bus Plan)</fullName>
            </value>
            <value>
                <fullName>100389	(Yield Mgt Support)</fullName>
            </value>
            <value>
                <fullName>100679	(Head of Domestic Security)</fullName>
            </value>
            <value>
                <fullName>100814 (Airports)</fullName>
            </value>
            <value>
                <fullName>101363	(Events)</fullName>
            </value>
            <value>
                <fullName>101366	(Baggage Goodwill)</fullName>
            </value>
            <value>
                <fullName>101397	(EU Compensation (not Regulation))</fullName>
            </value>
            <value>
                <fullName>170304	(Fleet Grounding)</fullName>
            </value>
            <value>
                <fullName>170305	(Emirates)</fullName>
            </value>
            <value>
                <fullName>172475	(PER Customer Service Dom)</fullName>
            </value>
            <value>
                <fullName>172476	(PER Customer Service Intl)</fullName>
            </value>
            <value>
                <fullName>200275	(QET)</fullName>
            </value>
            <value>
                <fullName>200280	(Customer Operations)</fullName>
            </value>
            <value>
                <fullName>202476	(SYD Airport Pax Services Intl)</fullName>
            </value>
            <value>
                <fullName>302600	(MEL DOM Baggage Claims)</fullName>
            </value>
            <value>
                <fullName>309276	(Customer Care)</fullName>
            </value>
            <value>
                <fullName>370280	(HBA Reservations)</fullName>
            </value>
            <value>
                <fullName>400280	(BNE Reservations)</fullName>
            </value>
            <value>
                <fullName>402475	(BN Airport Pax Services)</fullName>
            </value>
            <value>
                <fullName>522600	(Baggage Claims DRW Dom)</fullName>
            </value>
            <value>
                <fullName>557143 (Sydney Freight Terminal)</fullName>
            </value>
            <value>
                <fullName>557151 (Melbourne Freight Terminal)</fullName>
            </value>
            <value>
                <fullName>557175 (Customer Service)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>