force-app/main/default/objects/Recovery__c/fields/Refund_Cost_Centre_Number__c.field-meta.xml
<CustomField>
    <fullName>Refund_Cost_Centre_Number__c</fullName>
    <description>Used to separate the Refund Cost Centre Number from the Refund Cost Centre field</description>
    <formula>LEFT(TEXT(Refund_Cost_Centre__c), 6)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refund Cost Centre Number</label>
    <type>Text</type>
</CustomField>