force-app/main/default/objects/Recovery__c/fields/Refund_Cost_centre_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Refund_Cost_centre_Resolve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund Cost centre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>