force-app/main/default/objects/Recovery__c/fields/Refund_POS_Country__c.field-meta.xml
<CustomField>
    <fullName>Refund_POS_Country__c</fullName>
    <description>QCC: Used to store the country where the point of sale occurred that is being refunded by the EFT process</description>
    <label>Country of Financial Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU	(Australia)</fullName>
            </value>
            <value>
                <fullName>NZ	(New Zealand)</fullName>
            </value>
            <value>
                <fullName>GB	(United Kingdom)</fullName>
            </value>
            <value>
                <fullName>US	(United States)</fullName>
            </value>
            <value>
                <fullName>AS	(American Samoa)</fullName>
            </value>
            <value>
                <fullName>AR	(Argentina)</fullName>
            </value>
            <value>
                <fullName>AT	(Austria)</fullName>
            </value>
            <value>
                <fullName>BE	(Belgium)</fullName>
            </value>
            <value>
                <fullName>VG	(Virgin Islands, British)</fullName>
            </value>
            <value>
                <fullName>CA	(Canada)</fullName>
            </value>
            <value>
                <fullName>CL	(Chile)</fullName>
            </value>
            <value>
                <fullName>CN	(China)</fullName>
            </value>
            <value>
                <fullName>CK	(Cook Islands)</fullName>
            </value>
            <value>
                <fullName>HR	(Croatia)</fullName>
            </value>
            <value>
                <fullName>CY	(Cyprus)</fullName>
            </value>
            <value>
                <fullName>DK	(Denmark)</fullName>
            </value>
            <value>
                <fullName>TL	(Timor-Leste)</fullName>
            </value>
            <value>
                <fullName>EE	(Estonia)</fullName>
            </value>
            <value>
                <fullName>FJ	(Fiji)</fullName>
            </value>
            <value>
                <fullName>FI	(Finland)</fullName>
            </value>
            <value>
                <fullName>FR	(France)</fullName>
            </value>
            <value>
                <fullName>DE	(Germany)</fullName>
            </value>
            <value>
                <fullName>GR	(Greece)</fullName>
            </value>
            <value>
                <fullName>GU	(Guam)</fullName>
            </value>
            <value>
                <fullName>GG	(Guernsey)</fullName>
            </value>
            <value>
                <fullName>HK	(Hong Kong)</fullName>
            </value>
            <value>
                <fullName>IN	(India)</fullName>
            </value>
            <value>
                <fullName>ID	(Indonesia)</fullName>
            </value>
            <value>
                <fullName>IE	(Ireland)</fullName>
            </value>
            <value>
                <fullName>IM	(Isle of Man)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>