force-app/main/default/objects/Recovery__c/fields/Refund_POS_Country_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Refund_POS_Country_Resolve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refund POS Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>