force-app/main/default/objects/Recovery__c/fields/Registered_Date__c.field-meta.xml
<CustomField>
    <fullName>Registered_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registered Date</label>
    <type>Date</type>
</CustomField>