force-app/main/default/objects/Recovery__c/fields/Replacement_Bag_Type__c.field-meta.xml
<CustomField>
    <fullName>Replacement_Bag_Type__c</fullName>
    <description>The bag brand and range of the replacement bag</description>
    <label>Replacement Bag Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Belmont_Hard_case</fullName>
                <isActive>false</isActive>
                <label>Belmont_Hard_case</label>
            </value>
            <value>
                <fullName>Belmont_Plus</fullName>
                <label>Belmont Plus</label>
            </value>
            <value>
                <fullName>Brochant 2.0</fullName>
            </value>
            <value>
                <fullName>Chartreuse</fullName>
                <isActive>false</isActive>
                <label>Chartreuse</label>
            </value>
            <value>
                <fullName>Freestyle</fullName>
            </value>
            <value>
                <fullName>Lutece SE</fullName>
            </value>
            <value>
                <fullName>U_Lite_Classic_Soft_Care</fullName>
                <isActive>false</isActive>
                <label>U_Lite_Classic_Soft_Care</label>
            </value>
            <value>
                <fullName>U_Lite_Classic2</fullName>
                <isActive>false</isActive>
                <label>U-Lite Classic 2</label>
            </value>
            <value>
                <fullName>Vanguard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>