force-app/main/default/objects/Recovery__c/fields/Resolve_Recovery_Number__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Recovery_Number__c</fullName>
    <description>Resolve Recovery Number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve Recovery Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>