force-app/main/default/objects/Recovery__c/fields/Retrigger_Approval__c.field-meta.xml
<CustomField>
    <fullName>Retrigger_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to check if Approval can be retriggered for a recovery</description>
    <label>Retrigger Approval</label>
    <type>Checkbox</type>
</CustomField>