force-app/main/default/objects/Recovery__c/fields/Seat_number__c.field-meta.xml
<CustomField>
    <fullName>Seat_number__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Seat number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>