force-app/main/default/objects/Recovery__c/fields/Sequence_No__c.field-meta.xml
<CustomField>
    <fullName>Sequence_No__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Sequence No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>