force-app/main/default/objects/Recovery__c/fields/Size_of_Bag_cm__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Bag_cm__c</fullName>
    <description>The size of the replacement bag</description>
    <label>Size of Bag (cm)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Replacement_Bag_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>55</fullName>
            </value>
            <value>
                <fullName>66</fullName>
            </value>
            <value>
                <fullName>67</fullName>
            </value>
            <value>
                <fullName>68</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>71</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>76</fullName>
            </value>
            <value>
                <fullName>78</fullName>
            </value>
            <value>
                <fullName>79</fullName>
            </value>
            <value>
                <fullName>81</fullName>
            </value>
            <value>
                <fullName>82</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>