force-app/main/default/objects/Recovery__c/fields/SkipExceptionForEUComp__c.field-meta.xml
<CustomField>
    <fullName>SkipExceptionForEUComp__c</fullName>
    <defaultValue>false</defaultValue>
    <description>1061 - Skip Process Status to Exception for Recovery Reason - EU Compensation when Submit for Processing button is clicked 
Applicable only for EFT Recoveries</description>
    <label>SkipExceptionForEUComp</label>
    <type>Checkbox</type>
</CustomField>