force-app/main/default/objects/Recovery__c/fields/SMS_status_code__c.field-meta.xml
<CustomField>
    <fullName>SMS_status_code__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS status code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>