force-app/main/default/objects/Recovery__c/fields/SMS_type_sent__c.field-meta.xml
<CustomField>
    <fullName>SMS_type_sent__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>SMS type sent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>