force-app/main/default/objects/Recovery__c/fields/Suggested_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Maximum__c</fullName>
    <description>QCC: Maximum value suggested by the System</description>
    <label>Suggested Maximum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>