force-app/main/default/objects/Recovery__c/fields/Suggested_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Minimum__c</fullName>
    <description>QCC: Minimum value suggested by the System</description>
    <label>Suggested Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>