force-app/main/default/objects/Recovery__c/fields/TAX_Id_VAT_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>TAX_Id_VAT_Reg_No__c</fullName>
    <description>QCC: Used to store the TAX Id or VAT registration number for EFT Refunds</description>
    <encryptionScheme>None</encryptionScheme>
    <label>TAX Id / VAT Reg No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>