force-app/main/default/objects/Recovery__c/fields/TECH_Proactive__c.field-meta.xml
<CustomField>
    <fullName>TECH_Proactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to mark Recovery created from Event as Proactive</description>
    <label>Proactive</label>
    <type>Checkbox</type>
</CustomField>