force-app/main/default/objects/Recovery__c/fields/Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Number__c</fullName>
    <description>QCC: Used to create/store the ticket number for credit card refund recovery types</description>
    <formula>&quot;CCR&quot; &amp; Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticket Number</label>
    <type>Text</type>
</CustomField>