force-app/main/default/objects/Recovery__c/fields/Top_Parent_Case__c.field-meta.xml
<CustomField>
    <fullName>Top_Parent_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Top Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Recoveries (Top Parent Case)</relationshipLabel>
    <relationshipName>Recoveries1</relationshipName>
    <type>Lookup</type>
</CustomField>