force-app/main/default/objects/Recovery__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>QCC: Created to show/store Type of goodwill given to customer.</description>
    <label>Recovery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qantas Points</fullName>
            </value>
            <value>
                <fullName>Payment (EFT)</fullName>
            </value>
            <value>
                <fullName>Payment (Credit Card)</fullName>
            </value>
            <value>
                <fullName>Travel vouchers</fullName>
                <label>Travel Vouchers</label>
            </value>
            <value>
                <fullName>Lounge Passes</fullName>
            </value>
            <value>
                <fullName>Bag Replacement</fullName>
            </value>
            <value>
                <fullName>Bag Repair</fullName>
            </value>
            <value>
                <fullName>No Goodwill</fullName>
            </value>
            <value>
                <fullName>Ticket Refund EFT</fullName>
            </value>
            <value>
                <fullName>Cover Refund</fullName>
            </value>
            <value>
                <fullName>First Lounge Pass</fullName>
                <label>First Lounge Pass (CCAT Only)</label>
            </value>
            <value>
                <fullName>Space available upgrade</fullName>
                <label>Space Available Upgrade (CCAT Only)</label>
            </value>
            <value>
                <fullName>Firm space upgrade</fullName>
                <label>Firm Space Upgrade (CCAT Only)</label>
            </value>
            <value>
                <fullName>QF_HOTEL_voucher</fullName>
            </value>
            <value>
                <fullName>QF_WINE_voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>