force-app/main/default/objects/Recovery__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>QCC: Created to show/store the value of the goodwill given in AUD</description>
    <inlineHelpText>Goodwill value in AUD. This is a calculated field for equivalent AUD value. Please fill in monetary value instead.</inlineHelpText>
    <label>Equivalent AUD Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>