force-app/main/default/objects/Recovery__c/fields/Voucher_ID__c.field-meta.xml
<CustomField>
    <fullName>Voucher_ID__c</fullName>
    <description>Field used in Ex-gratia Flight Pass Voucher program</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Voucher ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>