force-app/main/default/objects/Recovery__c/fields/Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Voucher Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>