force-app/main/default/objects/Recovery__c/fields/Voucher_Validity_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Validity_in_Months__c</fullName>
    <label>Voucher Validity (in months)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>24</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>