force-app/main/default/objects/Recovery__c/recordTypes/Credit_Card_Recovery.recordType-meta.xml
<RecordType>
    <fullName>Credit_Card_Recovery</fullName>
    <active>true</active>
    <label>Credit Card Recovery</label>
</RecordType>