force-app/main/default/objects/Recovery__c/recordTypes/Customer_Connect.recordType-meta.xml
<RecordType>
    <fullName>Customer_Connect</fullName>
    <active>true</active>
    <label>Customer Connect</label>
</RecordType>