force-app/main/default/objects/Recovery__c/recordTypes/EFT_Recovery.recordType-meta.xml
<RecordType>
    <fullName>EFT_Recovery</fullName>
    <active>true</active>
    <label>EFT Recovery</label>
</RecordType>