force-app/main/default/objects/Recovery__c/recordTypes/Exgratia_Flight_Pass.recordType-meta.xml
<RecordType>
    <fullName>Exgratia_Flight_Pass</fullName>
    <active>true</active>
    <description>This record type is used in Exgratia Flight Pass business process.</description>
    <label>Exgratia Flight Pass</label>
</RecordType>