force-app/main/default/objects/Recovery__c/recordTypes/FreightFreight.recordType-meta.xml
<RecordType>
    <fullName>FreightFreight</fullName>
    <active>true</active>
    <label>Freight</label>
</RecordType>