force-app/main/default/objects/Recovery__c/recordTypes/Other_Recovery.recordType-meta.xml
<RecordType>
    <fullName>Other_Recovery</fullName>
    <active>true</active>
    <label>Other Recovery</label>
</RecordType>