force-app/main/default/objects/Recovery__c/recordTypes/QBR_Recovery.recordType-meta.xml
<RecordType>
    <fullName>QBR_Recovery</fullName>
    <active>true</active>
    <description>Used for QBR Recovery Process</description>
    <label>QBR Recovery</label>
</RecordType>