force-app/main/default/objects/Recovery__c/recordTypes/Travel_Voucher_Recovery.recordType-meta.xml
<RecordType>
    <fullName>Travel_Voucher_Recovery</fullName>
    <active>true</active>
    <label>Travel Voucher Recovery</label>
</RecordType>