force-app/main/default/objects/Recovery__c/validationRules/AccountNumber_Numeric.validationRule-meta.xml
<ValidationRule>
    <fullName>AccountNumber_Numeric</fullName>
    <active>true</active>
    <description>Account Number should be numeric</description>
    <errorConditionFormula>AND(
ISPICKVAL(Type__c, &apos;Payment (EFT)&apos;) || ISPICKVAL(Type__c, &apos;Ticket Refund EFT&apos;),
NOT(ISBLANK(Bank_Account_Number__c)),
NOT(REGEX(Bank_Account_Number__c, &quot;^[0-9]+$&quot;)),
ISCHANGED(Bank_Account_Number__c)
)</errorConditionFormula>
    <errorDisplayField>Bank_Account_Number__c</errorDisplayField>
    <errorMessage>Account Number should be numeric</errorMessage>
</ValidationRule>